Use TokenList::stream where applicable, fix code smells